# RL_Optimal_Trade

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
dashboard/: app.py
models/: a2c.json  doubledqn.json  dqn.json  ppo.json  sac.json
reports/: REPORT.md
results/: paired_vs_twap.csv  regime_results.csv  reward_logs.json  summary.json
rl_execution/: __init__.py  config.py  training.py
rl_execution/agents/: __init__.py  base.py  dqn.py  replay_buffer.py  sb3_agents.py
rl_execution/backtest/: __init__.py  engine.py
rl_execution/baselines/: __init__.py  almgren_chriss.py  base.py  pov.py  random_strategy.py  twap.py  vwap.py
rl_execution/cli/: __init__.py  evaluate.py  experiments.py  multiseed.py  report.py  train.py
rl_execution/data/: __init__.py  lob_data.py
rl_execution/envs/: __init__.py  execution_env.py  lob.py  market.py  multi_agent.py
rl_execution/experiments/: __init__.py  hpo.py  multiseed.py  regimes.py  runner.py
rl_execution/metrics/: __init__.py  metrics.py  stats.py
rl_execution/tracking/: __init__.py  base.py  factory.py  mlflow_tracker.py  registry.py  wandb_tracker.py
rl_execution/utils/: __init__.py  config_io.py  io.py  provenance.py  seeding.py  validation.py  warnings.py
rl_execution/viz/: __init__.py  plots.py
scripts/: evaluate.py  make_report.py  run_experiments.py  train.py
tests/: test_agents.py  test_baselines.py  test_cli.py  test_data_multiagent.py  test_env.py  test_lob.py  test_metrics.py  test_multiseed_hpo.py  test_reproducibility.py  test_stats.py  test_tracking.py
